--- a/components/theme/inheritance/theme.yaml.twig
+++ b/components/theme/inheritance/theme.yaml.twig
@@ -6,3 +6,4 @@ streams:
        '':
          - user/themes/{{ component.name|hyphenize }}
          - user/themes/{{ component.extends }}
+         - user/themes/upkeep
